--- a/flow-a-applicant/flow-a-applicant.html
+++ b/flow-a-applicant/flow-a-applicant.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper wide">
         <h1>Matching Companies</h1>
         <p class="intro">These are your best-fit companies (51% and above)</p>
 
