--- a/flow-b-applicant/flow-b-applicant.html
+++ b/flow-b-applicant/flow-b-applicant.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper narrow">
         <h1>Match Result</h1>
         <p class="intro">This is how well you match with the company that invited you</p>
 
