--- a/flow-company/flow-company.html
+++ b/flow-company/flow-company.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper wide">
         <h1>Matching Applicants</h1>
         <div class="filter-controls">
             <label for="role-filter">Filter by role:</label>
