notes-section flow-company

--- a/flow-company/flow-company.html
+++ b/flow-company/flow-company.html
@@ -82,6 +82,12 @@
                     <button class="favorite">❤ Save</button>
                     <button class="dismiss">✖ Dismiss</button>
                 </div>
+                <div class="note-section">
+                    <button class="toggle-note">📝 Notes</button>
+                    <textarea class="note-area" placeholder="Write your notes..."></textarea>
+                </div>
+
+
             </div>
 
             <!-- CARD 2 -->
@@ -124,6 +130,12 @@
                     <button class="favorite">❤ Save</button>
                     <button class="dismiss">✖ Discard</button>
                 </div>
+                <div class="note-section">
+                    <button class="toggle-note">📝 Notes</button>
+                    <textarea class="note-area" placeholder="Write your notes..."></textarea>
+                </div>
+
+
             </div>
 
             <!-- CARD 3 -->
@@ -166,6 +178,12 @@
                     <button class="favorite">❤ Save</button>
                     <button class="dismiss">✖ Discard</button>
                 </div>
+                <div class="note-section">
+                    <button class="toggle-note">📝 Notes</button>
+                    <textarea class="note-area" placeholder="Write your notes..."></textarea>
+                </div>
+
+
             </div>
 
             <!-- CARD 4 -->
@@ -208,6 +226,11 @@
                     <button class="favorite">❤ Save</button>
                     <button class="dismiss">✖ Discard</button>
                 </div>
+                <div class="note-section">
+                    <button class="toggle-note">📝 Notes</button>
+                    <textarea class="note-area" placeholder="Write your notes..."></textarea>
+                </div>
+
             </div>
 
             <!-- CARD 5 -->
@@ -249,6 +272,10 @@
                     <button>View CV</button>
                     <button class="favorite">❤ Save</button>
                     <button class="dismiss">✖ Discard</button>
+                </div>
+                <div class="note-section">
+                    <button class="toggle-note">📝 Notes</button>
+                    <textarea class="note-area" placeholder="Write your notes..."></textarea>
                 </div>
             </div>
         </div>
